--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "1.3.0",
+    "d3-drag": "3.0.0",
+    "d3-force": "3.0.0",
+    "d3-selection": "3.0.0",
+    "d3-zoom": "3.0.0",
+    "lucide-react": "0.475.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "0.475.0",
-    "d3-force": "3.0.0",
-    "d3-drag": "3.0.0",
-    "d3-zoom": "3.0.0",
-    "d3-selection": "3.0.0",
-    "recharts": "2.15.0",
-    "@google/genai": "1.3.0"
+    "recharts": "2.15.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
