--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "copy-of-synapse-context-engine--(sce)-v0.3",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,7 +18,9 @@
     "lucide-react": "0.475.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "recharts": "2.15.0"
+    "react-markdown": "^10.1.0",
+    "recharts": "2.15.0",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.9.6",
