--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "copy-of-synapse-context-engine--(sce)-v0.3",
   "private": true,
-  "version": "0.2.1",
+  "version": "0.3.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@google/genai": "1.3.0",
+    "@tauri-apps/plugin-sql": "^2.3.1",
+    "@tauri-apps/plugin-store": "^2.4.1",
     "d3-drag": "3.0.0",
     "d3-force": "3.0.0",
     "d3-selection": "3.0.0",
@@ -20,9 +22,11 @@
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "recharts": "2.15.0",
-    "rehype-raw": "^7.0.0"
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@tauri-apps/cli": "^2.9.6",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
