fix: Update GitHub Wiki Action input parameter

--- a/.github/workflows/publish_wiki.yml
+++ b/.github/workflows/publish_wiki.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Sync Wiki
         uses: Andrew-Chen-Wang/github-wiki-action@v4
         with:
-          wiki-folder: docs/wiki
+          path: docs/wiki
